[package]
name = "threadpooled"
version = "0.1.1"
edition = "2021"
author = "linuxchr"
description = "Threadpool implementation"
license = "LGPL-3.0-only"
documentation = "https://docs.rs/threadpooled"
repository = "https://github.com/linuxchr/threadpooled"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
